cabal-version:       >=1.10

name:                j2j
version:             1.0.0
license:             GPL-3
license-file:        LICENSE
author:              lep
maintainer:          lep.delete@googlemail.com
build-type:          Simple
extra-source-files:  Readme.md

executable j2j
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: Jass.JSON, Jass.Parser, Jass.Ast, Jass.Printer, Data.Composeable
  build-depends: base, bytestring, megaparsec, mtl, parser-combinators,
                 optparse-applicative, aeson, vector, text, binary, hashable
  default-language: Haskell2010
